carousel hidden at 500px and under

--- a/Fridge Advisor/masterStyle.css
+++ b/Fridge Advisor/masterStyle.css
@@ -23,6 +23,13 @@
      display: none;
    }
  }
+
+ @media (max-width:500px) {
+    .carousel {
+        display:none !important;
+    }
+}
+
  .img-responsive{
    width: 100%;
  }
